--- a/cohortAnalysis/medWeb1.0/index.html
+++ b/cohortAnalysis/medWeb1.0/index.html
@@ -87,11 +87,11 @@ Purchase: https://wrapbootstrap.com/theme/beyondadmin-adminapp-angularjs-mvc-WB0
         <script src="lib/jquery/jquery.min.js"></script>
         <script src="lib/jquery/bootstrap.js"></script>
         <script src="lib/angular/angular.js"></script>
-
         <script src="lib/utilities.js"></script>
         <script src="lib/underscore.js"></script>
         <script src="lib/store.min.js"></script>
-
+        <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=BK1gzVh8CI2rIscK2m2GSEpNqn8OCNxy"></script>
+        <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
         <script src="lib/angular/angular-animate/angular-animate.js"></script>
         <script src="lib/angular/angular-cookies/angular-cookies.js"></script>
         <script src="lib/angular/angular-resource/angular-resource.js"></script>
